# EvidenT

./: .env.example  .gitignore  ARTIFACT.md  Dockerfile  LICENSE  OBS_GUIDE.md  README.md  REQUIREMENTS.md  STATUS.md  client.py  config_utils.py  index.html  main.py  merge_client.py  merge_server.py  pyproject.toml  repair_server.py  requirements.txt  server.py
LogFilter&AnomalyDection_src/: Log_Filtering.py  anomaly_detector.py  template_parser.py
LogFilter&AnomalyDection_src/utils/: llm_utils.py
agent_less_tools/: get_repo_structure.py
build_dataset/: process_data.py  rebuild.py
config/: obs_meta.yaml  paths.yaml
docker/: validator-riscv64.Dockerfile
end_to_end/: copy_failed_packages.py  download_failed_package.py  download_files.py  rebuild.py  upload_files.py
knowledge_base/: github_issues_res.csv  risc_v_knowledge_base.csv
mcp_server_tools/auto_repair/: check_build_res.py  get_repo_structure.py  upload_files.py
mcp_server_tools/rca_tools/: anomaly_detection.py  arch_know_search.py  context_log_retrieve.py  historical_case.py  spec_directive.py
mcts/: main.py  mcts_con.py
mcts/tools/: historical_case.py  spec_directive.py
rca_tools/: arch_know_search.py  context_log_retrieve.py  historical_case.py  spec_directive.py
rca_tools/anomaly_detection/: Log_Filtering.py  anomaly_detector.py  calculate.py  run.py  template_parser.py
scripts/: build_validator_image.sh  obs_bulk_upload.py  reproduce_reduced.sh  smoke_test.py  validate_package.py
utils/: log_tool_build.py  metrics_tool_build.py  split_data.py  trace_tool_build.py
(+38 files in other folders)
